# SVD_STFT

./: FINAL_SVD_STFT_ANALYSIS_REPORT.md  PARAMETER_TUNING_SUMMARY.md  README.md  ROBUSTNESS_EVALUATION_SUMMARY.md  algorithm_analysis_and_recommendations.md  audioseal_style_eval.py  best_svd_stft_implementation.py  example_robustness.py  final_best_svd_stft.py  final_robustness_test.py  final_tuned_svd_stft.py  fundamental_improvement.py  improved_algorithm.py  improved_svd_stft.py  parameter_optimization.py  pyproject.toml  requirements.txt  results.csv  robustness_evaluation.py  sweep_results.txt  test_100samples_comprehensive.py  test_quick_sample.py  test_robustness.py  test_svdstft_only.py
audioseal_eval/: comprehensive_attack_results.csv  comprehensive_attack_results.json  final_table.md  improved_tpr_fpr_nc_results.json  nc_results.json  pesq_torchmetrics_16k_and_resample.csv  pesq_torchmetrics_clean_only.csv  pesq_torchmetrics_clean_summary.json  pesq_torchmetrics_summary.json  pesq_torchmetrics_watermarked.csv  pesq_torchmetrics_watermarked_resample.csv  pesq_torchmetrics_watermarked_resample_summary.json  pesq_torchmetrics_watermarked_summary.json  resample_attack_results.json  results.json  tpr_fpr_nc_results.json
best_svd_stft_results/: best_svd_stft_results.json
comprehensive_test_results/: FINAL_RESULTS_SUMMARY.md
comprehensive_test_results_updated/: UPDATED_RESULTS_SUMMARY.md
docs/: architecture.md  robustness_evaluation.md  usage.md
example_output/: example_results.json
experiments/: auto_svdstft_sweep.py  cli_watermark.py  robustness_test.py
(+1795 files in other folders)
