[tool.poetry]
name = "voicemarkwatermark"
version = "0.1.0"
description = "SVD-STFT audio watermarking module"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
librosa = "*"
soundfile = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 